<resources>
    <string name="app_name">Ecommerce App</string>
    <string name="new_product">New</string>
    <string name="card_number">* * * * * * * * * * * * 3947</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="use_as_default_payment_method">Use as default payment method</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="add_new_card">Add new Card</string>
    <string name="add_card">Add Card</string>
    <string name="empty_favourite">Empty Favourite</string>
    <string name="add_to_bag">Add To Bag</string>
    <string name="card_number_star">**** **** **** </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_by_name">Search Product By Name</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_error">email must contain @</string>
    <string name="password">Password</string>
    <string name="password_error">Password must equal 8 chars</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">name</string>
    <string name="already_have_account">already Have Account</string>
    <string name="required">this field is required</string>
    <string name="password_length_error">password length must be more than 8 char</string>
    <string name="confirm_password_error">passsword must be identical</string>
    <string name="invalid_email">Not a valid email address. Should be your@email.com</string>
    <string name="ok">ok</string>
    <string name="email_or_password_error">email or password error</string>
    <string name="error">error</string>
    <string name="more">More</string>
    <string name="reviews">Reviews</string>
    <string name="empty_wishlist">no items founded</string>
    <string name="favourite">favourite</string>

        <array name="initial_slider_values">
            <item>25.0</item>
            <item>75.0</item>
        </array>
</resources>