<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.LoginFragment">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="TODO"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/metropolis_bold"
        android:text="@string/login"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTV">

        <EditText
            android:id="@+id/emailEt"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_bg"
            android:drawableEnd="@null"
            android:fontFamily="@font/metropolis_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailErrorTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/metropolis_regular"
            android:text="@string/email_error"
            android:textColor="@color/primary"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/emailEt"
            app:layout_constraintStart_toStartOf="@+id/emailEt"
            app:layout_constraintTop_toBottomOf="@+id/emailEt" />

        <EditText
            android:id="@+id/PasswordET"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_bg"
            android:drawableEnd="@null"
            android:fontFamily="@font/metropolis_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/emailEt"
            app:layout_constraintStart_toStartOf="@+id/emailEt"
            app:layout_constraintTop_toBottomOf="@id/emailEt" />

        <TextView
            android:id="@+id/passwordErrorTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/metropolis_regular"
            android:text="@string/password_error"
            android:textColor="@color/primary"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/PasswordET"
            app:layout_constraintStart_toStartOf="@+id/PasswordET"
            app:layout_constraintTop_toBottomOf="@+id/PasswordET" />

        <TextView
            android:id="@+id/forgotPasswordTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/metropolis_regular"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/PasswordET"
            app:layout_constraintStart_toStartOf="@+id/PasswordET"
            app:layout_constraintTop_toBottomOf="@+id/passwordErrorTV" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/btn_bg"
            android:elevation="8dp"
            android:fontFamily="@font/metropolis_regular"
            android:text="@string/login"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/forgotPasswordTv"
            app:layout_constraintStart_toStartOf="@+id/forgotPasswordTv"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTv" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>