<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.auth.signup.RegisterFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@android:color/transparent"
                android:contentDescription="knk"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/loginTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/metropolis_bold"
                android:text="@string/sign_up"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/backButton" />

            <EditText
                android:id="@+id/nameEt"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="48dp"
                android:background="@drawable/edit_text_bg"
                android:drawableEnd="@null"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginTV" />

            <TextView
                android:id="@+id/text_view_name_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textColor="#FF0000"
                app:layout_constraintEnd_toEndOf="@+id/nameEt"
                app:layout_constraintStart_toStartOf="@+id/nameEt"
                app:layout_constraintTop_toBottomOf="@+id/nameEt" />


            <EditText
                android:id="@+id/emailEt"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/edit_text_bg"
                android:drawableEnd="@null"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nameEt" />

            <TextView
                android:id="@+id/text_view_email_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textColor="#FF0000"
                app:layout_constraintEnd_toEndOf="@+id/emailEt"
                app:layout_constraintStart_toStartOf="@+id/emailEt"
                app:layout_constraintTop_toBottomOf="@+id/emailEt" />


            <EditText
                android:id="@+id/PasswordET"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/edit_text_bg"
                android:drawableEnd="@null"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/emailEt"
                app:layout_constraintStart_toStartOf="@+id/emailEt"
                app:layout_constraintTop_toBottomOf="@id/emailEt" />

            <TextView
                android:id="@+id/text_view_password_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textColor="#FF0000"
                app:layout_constraintEnd_toEndOf="@+id/PasswordET"
                app:layout_constraintStart_toStartOf="@+id/PasswordET"
                app:layout_constraintTop_toBottomOf="@+id/PasswordET" />


            <EditText
                android:id="@+id/confirmPasswordET"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/edit_text_bg"
                android:drawableEnd="@null"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/PasswordET"
                app:layout_constraintStart_toStartOf="@+id/PasswordET"
                app:layout_constraintTop_toBottomOf="@+id/PasswordET" />

            <TextView
                android:id="@+id/text_view_confirm_password_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textColor="#FF0000"
                app:layout_constraintEnd_toEndOf="@+id/confirmPasswordET"
                app:layout_constraintStart_toStartOf="@+id/confirmPasswordET"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordET" />


            <TextView
                android:id="@+id/alreadyHaveAccTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/metropolis_regular"
                android:gravity="end"
                android:text="@string/already_have_account"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmPasswordET" />

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/btn_bg"
                android:elevation="8dp"
                android:fontFamily="@font/metropolis_regular"
                android:text="@string/sign_up"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/alreadyHaveAccTV"
                app:layout_constraintStart_toStartOf="@+id/alreadyHaveAccTV"
                app:layout_constraintTop_toBottomOf="@+id/alreadyHaveAccTV" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>